--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -1,7 +1,17 @@
 # Installs RRTMG++ interface
 
-set(namel "rrtmg++_sw")
+set(namel "rrtmg_sw++")
 string(TOUPPER ${namel} nameu)
+
+if(CMAKE_Fortran_COMPILER_ID MATCHES "GNU")
+  set(${PROJECT_NAME}_FEXPAND "__ ## mname ## _MOD_ ## fname"
+    CACHE INTERNAL "Fortran name mangling macro")
+elseif(CMAKE_Fortran_COMPILER_ID MATCHES "Intel")
+  set(${PROJECT_NAME}_FEXPAND "mname ## _mp_ ## fname ## _"
+    CACHE INTERNAL "Fortran name mangling macro")
+else()
+  message(FATAL_ERROR "Unsupported Fortran compiler")
+endif()
 
 file(GLOB src_files
     *.cpp
@@ -17,5 +27,18 @@ add_library(${namel}_${buildl}
 
 set_target_properties(${namel}_${buildl}
     PROPERTIES
-    COMPILE_FLAGS ${CMAKE_CXX_FLAGS_${buildu}}
+    COMPILE_FLAGS ${${PROJECT_NAME}_CXX_FLAGS}
     )
+
+target_include_directories(${namel}_${buildl}
+    PRIVATE
+    ${CMAKE_CURRENT_BINARY_DIR}
+    )
+
+target_link_libraries(${namel}_${buildl}
+    rrtmg::rrtmg_swf
+    )
+
+configure_file(macros.h.in macros.h @ONLY)
+
+add_library(rrtmg::rrtmg_sw++ ALIAS ${namel}_${buildl})
